--- a/forumTest/Views/Posts/Create.cshtml
+++ b/forumTest/Views/Posts/Create.cshtml
@@ -23,8 +23,11 @@
                 <span asp-validation-for="User" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @{
+                    var t =  DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss").Replace(' ','T');
+                }
                 <label asp-for="Time" class="control-label"></label>
-                <input asp-for="Time" class="form-control" value="@DateTime.Now" />
+                <input asp-for="Time" class="form-control" value="@t"  />
                 <span asp-validation-for="Time" class="text-danger"></span>
             </div>
             <div class="form-group">
