--- a/forumTest/Views/Comments/Details.cshtml
+++ b/forumTest/Views/Comments/Details.cshtml
@@ -1,13 +1,20 @@
-﻿@model forumTest.Models.Post
+@model forumTest.Models.Comment
 
 @{
-    ViewData["Title"] = "Details";
+    Layout = null;
 }
 
-<h1>Details</h1>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Details</title>
+</head>
+<body>
 
 <div>
-    <h4>Post</h4>
+    <h4>Comment</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,16 +24,16 @@
             @Html.DisplayFor(model => model.Text)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.Post)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User)
+            @Html.DisplayFor(model => model.Post)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Time)
+            @Html.DisplayNameFor(model => model.Parent)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Time)
+            @Html.DisplayFor(model => model.Parent)
         </dd>
     </dl>
 </div>
@@ -34,6 +41,5 @@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
-
-@Html.Partial("_NewComment", new Comment { Id = Guid.NewGuid(), Post=Model.Id })
-@Html.Partial("_ListOfComments", new Comment { Id = Guid.NewGuid(), Post=Model.Id })
+</body>
+</html>
