--- a/forumTest/Views/Posts/Details.cshtml
+++ b/forumTest/Views/Posts/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model forumTest.Models.Post
+﻿@model forumTest.Models.PostViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,29 +11,29 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Text)
+            @Html.DisplayNameFor(model => model.Post.Text)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Text)
+            @Html.DisplayFor(model => model.Post.Text)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.Post.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User)
+            @Html.DisplayFor(model => model.Post.User)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Time)
+            @Html.DisplayNameFor(model => model.Post.Time)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Time)
+            @Html.DisplayFor(model => model.Post.Time)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Post.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
 
-@Html.Partial("_NewComment", new Comment { Id = Guid.NewGuid(), Post=Model.Id })
-@Html.Partial("_ListOfComments", new Comment { Id = Guid.NewGuid(), Post=Model.Id })
+@Html.Partial("_NewComment", new Comment { Id = Guid.NewGuid(), Post=Model.Post.Id })
+@Html.Partial("_ListOfComments", Model.Comments)
