--- a/forumTest/Views/Shared/_NewComment.cshtml
+++ b/forumTest/Views/Shared/_NewComment.cshtml
@@ -11,25 +11,22 @@
                 <input asp-for="Text" class="form-control" />
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Post" class="control-label"></label>
+            <div hidden>
                 <input asp-for="Post" class="form-control" />
                 <span asp-validation-for="Post" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Parent" class="control-label"></label>
                 <input asp-for="Parent" class="form-control" />
                 <span asp-validation-for="Parent" class="text-danger"></span>
+                @{
+                    var t =  DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss").Replace(' ','T');
+                }
+                <input asp-for="Time" class="form-control" value="@t"  />
+                <span asp-validation-for="Time" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
