--- a/forumTest/Views/Shared/_NewComment.cshtml
+++ b/forumTest/Views/Shared/_NewComment.cshtml
@@ -1,7 +1,6 @@
 ﻿@model forumTest.Models.Comment
 
-<h4>Comment</h4>
-<hr />
+<h4>New Comment</h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" asp-controller="Comments">
