--- a/forumTest/wwwroot/css/my.css
+++ b/forumTest/wwwroot/css/my.css
@@ -3,3 +3,14 @@
 .indent {
     padding-left: 3em;
 }
+button.link {
+    background:none;border:none; 
+}
+
+.bar {
+    width: 100%;
+    height: .05em;
+    background-color: grey;
+    vertical-align: middle;    
+    display: inline-block;
+}
