--- a/forumTest/Views/Shared/_NewComment.cshtml
+++ b/forumTest/Views/Shared/_NewComment.cshtml
@@ -1,31 +1,30 @@
 ﻿@model forumTest.Models.Comment
+@{
+    //this partial view is the form to make a reply to a comment
+}
 
-<h4>New Comment</h4>
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" asp-controller="Comments">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Text" class="control-label"></label>
-                <input asp-for="Text" class="form-control" />
-                <span asp-validation-for="Text" class="text-danger"></span>
-            </div>
-            <div hidden>
-                <input asp-for="Post" class="form-control" />
-                <span asp-validation-for="Post" class="text-danger"></span>
-                <input asp-for="Parent" class="form-control" />
-                <span asp-validation-for="Parent" class="text-danger"></span>
-                @{
-                    var t =  DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss").Replace(' ','T');
-                }
-                <input asp-for="Time" class="form-control" value="@t"  />
-                <span asp-validation-for="Time" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div class="row" >
+    <form asp-action="Create" asp-controller="Comments" style="width:100%;">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <textarea asp-for="Text" class="form-control" ></textarea>
+            <span asp-validation-for="Text" class="text-danger"></span>
+        </div>
+        <div hidden>
+            <input asp-for="Post" class="form-control" />
+            <span asp-validation-for="Post" class="text-danger"></span>
+            <input asp-for="Parent" class="form-control" />
+            <span asp-validation-for="Parent" class="text-danger"></span>
+            @{
+                var t =  DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss").Replace(' ','T');
+            }
+            <input asp-for="Time" class="form-control" value="@t"  />
+            <span asp-validation-for="Time" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="reply" class="btn btn-secondary" />
+        </div>
+    </form>
 </div>
 
 @section Scripts {
