--- a/forumTest/Views/Shared/_NewComment.cshtml
+++ b/forumTest/Views/Shared/_NewComment.cshtml
@@ -7,7 +7,8 @@
     <form asp-action="Create" asp-controller="Comments" style="width:100%;">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <textarea asp-for="Text" class="form-control" ></textarea>
+            @Html.TextArea("Text", null, new { cols = "55", rows = "10" })
+            <!-- <asp:TextBox asp-for="Text" runat="server" ID="MyBox" TextMode="MultiLine" Rows="10" /> -->
             <span asp-validation-for="Text" class="text-danger"></span>
         </div>
         <div hidden>
